feat: Add TMDB client and utility classes. Optimised app for component reusability and error handling